Bugfix: footer bottom whitespace removed

--- a/public/reset.css
+++ b/public/reset.css
@@ -1,6 +1,8 @@
 html{
   height: 100%;
   overflow: hidden;
+  padding: 0;
+  margin: 0;
 }
 
 body {
